--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -1,20 +1,24 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: ".vr_settings.yaml"
-width: 1524
+width: 1639
 height: 691
 panel_pos: 360
 notebook_panel_position: 400
 run_command_line: ruby vr
 open_files:
-- "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
+- "/home/eric/vrp/vr3/vrlib/yard_hack/common.css"
+- "/home/eric/vrp/vr3/vrlib/README.md"
+- "/home/eric/vrp/vr3/vrlib/doc/top-level-namespace.html"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/vrlib"
 - "/home/eric/vrp/vr3/vrlib/doc"
-current_file: "/home/eric/vrp/vr3/bin/main/VR_File_Tree.rb"
-current_line: 61
+- "/home/eric/vrp/vr3/vrlib/doc/css"
+- "/home/eric/vrp/vr3/vrlib/yard_hack"
+current_file: "/home/eric/vrp/vr3/vrlib/yard_hack/common.css"
+current_line: 10
 rdoc_command_line: yardoc - site/*.md
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
