--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -9,16 +9,20 @@ open_files:
 - "/home/eric/vrp/vr3/vrlib/yard_hack/common.css"
 - "/home/eric/vrp/vr3/vrlib/README.md"
 - "/home/eric/vrp/vr3/vrlib/doc/top-level-namespace.html"
+- "/home/eric/vrp/vr3/bin/main/OpenProject.rb"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview/FileTreeView.rb"
+- "/home/eric/vrp/vr3/bin/main/ProjectTree.rb"
+- "/home/eric/vrp/vr3/examples/filetreeview/bin/ProjectTree.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/bin"
 - "/home/eric/vrp/vr3/bin/main"
 - "/home/eric/vrp/vr3/vrlib"
-- "/home/eric/vrp/vr3/vrlib/doc"
-- "/home/eric/vrp/vr3/vrlib/doc/css"
+- "/home/eric/vrp/vr3/vrlib/lib"
+- "/home/eric/vrp/vr3/vrlib/lib/treeview"
 - "/home/eric/vrp/vr3/vrlib/yard_hack"
-current_file: "/home/eric/vrp/vr3/vrlib/yard_hack/common.css"
-current_line: 10
+current_file: "/home/eric/vrp/vr3/bin/main/ProjectTree.rb"
+current_line: 11
 rdoc_command_line: yardoc - site/*.md
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
