--- a/my_yard.yaml
+++ b/my_yard.yaml
@@ -1,20 +1,18 @@
 --- !ruby/object:MyYard
 project_root: "/home/eric/vrp/vr3"
 output_dir: doc
-theme: visualruby
+theme: default
 template: default
-files: lib/**/*.rb
-extra_files: site/*.*
-exclude: ''
+files: "*/**/*.rb */**/*.c"
+extra_files: "*/**/*.md */**/*.rdoc"
+exclude: "*.glade"
 include_public: true
 include_private: false
 include_protected: false
-no_private: true
-export_db: true
-title: Visual Ruby
+no_private: false
+export_db: false
+title: Get outta my yard!
 vr_yaml_file: "/home/eric/vrp/vr3/my_yard.yaml"
-main: index.html
+main: README.md
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: true
-answer: !ruby/object:VR::Alert::DialogAnswer
-  answer: true
