--- a/examples/active_record/.vr_settings.yaml
+++ b/examples/active_record/.vr_settings.yaml
@@ -1,14 +1,19 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: "/home/eric/vrp/vr3/examples/active_record/.vr_settings.yaml"
-width: 800
+width: 885
 height: 600
 panel_pos: 360
 notebook_panel_position: 400
-run_command_line: ruby main.rb
+run_command_line: ruby active_record.rb
 open_files:
-- "/home/eric/vrp/vr3/Untitled"
+- "/home/eric/vrp/vr3/examples/active_record/active_record.rb"
+- "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/active_record"
-current_file: "/home/eric/vrp/vr3/Untitled"
-current_line: 1
+- "/home/eric/vrp/vr3/examples/active_record/bin"
+- "/home/eric/vrp/vr3/examples/active_record/bin/glade"
+current_file: "/home/eric/vrp/vr3/examples/active_record/bin/Person.rb"
+current_line: 22
 rdoc_command_line: rdoc -x README
+builder: !ruby/object:Gtk::Builder {}
+top_level_window: false
