--- a/examples/calculator/.vr_settings.yaml
+++ b/examples/calculator/.vr_settings.yaml
@@ -1,7 +1,9 @@
 --- !ruby/object:VR_ENV
+vr_yaml_file: "/home/eric/vrp/vr3/examples/calculator/.vr_settings.yaml"
 width: 1028
 height: 691
 panel_pos: 365
+notebook_panel_position: 400
 run_command_line: ruby main.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/calculator/main.rb"
@@ -10,9 +12,7 @@ open_folders:
 - "/home/eric/vrp/vr3/examples/calculator"
 - "/home/eric/vrp/vr3/examples/calculator/bin"
 current_file: "/home/eric/vrp/vr3/examples/calculator/bin/Calculator.rb"
-rdoc_command_line: rdoc -x README
-vr_yaml_file: ".vr_settings.yaml"
-notebook_panel_position: 400
 current_line: 65
+rdoc_command_line: rdoc -x README
 settings_file_version: 1
 filename: ".vr_settings.yaml"
