--- a/examples/simple_ruby_gui/.vr_settings.yaml
+++ b/examples/simple_ruby_gui/.vr_settings.yaml
@@ -1,7 +1,9 @@
 --- !ruby/object:VR_ENV
-width: 1366
+vr_yaml_file: "/home/eric/vrp/vr3/examples/simple_ruby_gui/.vr_settings.yaml"
+width: 1301
 height: 692
 panel_pos: 490
+notebook_panel_position: 400
 run_command_line: ruby main.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/simple_ruby_gui/bin/DataObjectGUI.rb"
@@ -9,12 +11,9 @@ open_files:
 open_folders:
 - "/home/eric/vrp/vr3/examples/simple_ruby_gui"
 - "/home/eric/vrp/vr3/examples/simple_ruby_gui/bin"
-- "/home/eric/vrp/vr3/examples/simple_ruby_gui/bin/glade"
-current_file: "/home/eric/vrp/vr3/examples/simple_ruby_gui/main.rb"
+current_file: "/home/eric/vrp/vr3/examples/simple_ruby_gui/bin/DataObjectGUI.rb"
+current_line: 22
 rdoc_command_line: rdoc -x README
-vr_yaml_file: ".vr_settings.yaml"
-notebook_panel_position: 400
-current_line: 13
-settings_file_version: 1
 builder: !ruby/object:Gtk::Builder {}
+settings_file_version: 1
 filename: ".vr_settings.yaml"
