--- a/examples/treeview/.vr_settings.yaml
+++ b/examples/treeview/.vr_settings.yaml
@@ -1,7 +1,9 @@
 --- !ruby/object:VR_ENV
-width: 984
-height: 711
+vr_yaml_file: "/home/eric/vrp/vr3/examples/treeview/.vr_settings.yaml"
+width: 1301
+height: 744
 panel_pos: 491
+notebook_panel_position: 400
 run_command_line: ruby main.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/treeview/main.rb"
@@ -9,9 +11,7 @@ open_files:
 open_folders:
 - "/home/eric/vrp/vr3/examples/treeview"
 - "/home/eric/vrp/vr3/examples/treeview/bin"
-current_file: "/home/eric/vrp/vr3/examples/treeview/main.rb"
+current_file: "/home/eric/vrp/vr3/examples/treeview/bin/MyClass.rb"
+current_line: 1
 rdoc_command_line: rdoc -x README
-vr_yaml_file: ".vr_settings.yaml"
-notebook_panel_position: 400
-current_line: 14
 settings_file_version: 1
