--- a/examples/listview/.vr_settings.yaml
+++ b/examples/listview/.vr_settings.yaml
@@ -1,7 +1,7 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: "/home/eric/vrp/vr3/examples/listview/.vr_settings.yaml"
-width: 1251
-height: 691
+width: 1301
+height: 744
 panel_pos: 322
 notebook_panel_position: 437
 run_command_line: ruby main.rb
@@ -12,7 +12,8 @@ open_files:
 open_folders:
 - "/home/eric/vrp/vr3/examples/listview"
 - "/home/eric/vrp/vr3/examples/listview/bin"
+- "/home/eric/vrp/vr3/examples/listview/bin/glade"
 current_file: "/home/eric/vrp/vr3/examples/listview/bin/SongListViewGUI.rb"
-current_line: 42
+current_line: 19
 rdoc_command_line: rdoc -x README
 filename: ".vr_settings.yaml"
