--- a/examples/77_better_views/.vr_settings.yaml
+++ b/examples/77_better_views/.vr_settings.yaml
@@ -9,16 +9,17 @@ run_command_line: ruby better_views.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/77_better_views/better_views.rb"
 - "/home/eric/vrp/vr3/examples/77_better_views/src/BetterView.rb"
+- "/home/eric/vrp/vr3/examples/77_better_views/README.txt"
 open_folders:
 - "/home/eric/vrp/vr3/examples/77_better_views"
 - "/home/eric/vrp/vr3/examples/77_better_views/src"
 - "/home/eric/vrp/vr3/examples/77_better_views/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/77_better_views/src/BetterView.rb"
+current_file: "/home/eric/vrp/vr3/examples/77_better_views/README.txt"
 glade_path: glade-3
 font_name: Monospace 10
 rdoc_command_line: rdoc -x README
 vr_yaml_file: "/home/eric/vrp/vr3/examples/77_better_views/.vr_settings.yaml"
 notebook_panel_position: 718
-current_line: 33
+current_line: 40
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
