--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -20,11 +20,12 @@ open_files:
 open_folders:
 - "/home/eric/vrp/vr3"
 - "/home/eric/vrp/vr3/lib"
+- "/home/eric/vrp/vr3/lib/glade"
 - "/home/eric/vrp/vr3/src"
 - "/home/eric/vrp/vr3/src/glade"
 - "/home/eric/vrp/vr3/src/main"
-current_file: "/home/eric/vrp/vr3/lib/GladeGUI.rb"
-current_line: 475
+current_file: "/home/eric/vrp/vr3/vr"
+current_line: 19
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
