--- a/examples/08_interrupt_exit/.vr_settings.yaml
+++ b/examples/08_interrupt_exit/.vr_settings.yaml
@@ -1,24 +1,25 @@
 --- !ruby/object:VR_ENV
-browser: firefox
-width: 1858
+vr_yaml_file: "/home/eric/vrp/vr3/examples/08_interrupt_exit/.vr_settings.yaml"
+width: 1854
 height: 1003
 panel_pos: 360
-backup_path: "/home/eric"
-tab_spaces: 2
+notebook_panel_position: 622
 run_command_line: ruby interrupt_exit.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/08_interrupt_exit/interrupt_exit.rb"
 - "/home/eric/vrp/vr3/examples/08_interrupt_exit/src/InterruptExit.rb"
+- "/home/eric/vrp/vr3/examples/08_interrupt_exit/README.txt"
 open_folders:
 - "/home/eric/vrp/vr3/examples/08_interrupt_exit"
 - "/home/eric/vrp/vr3/examples/08_interrupt_exit/src"
 - "/home/eric/vrp/vr3/examples/08_interrupt_exit/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/08_interrupt_exit/src/InterruptExit.rb"
-glade_path: glade-3
-font_name: Monospace 10
+current_file: "/home/eric/vrp/vr3/examples/08_interrupt_exit/README.txt"
+current_line: 3
 rdoc_command_line: rdoc -x README
-vr_yaml_file: "/home/eric/vrp/vr3/examples/08_interrupt_exit/.vr_settings.yaml"
-notebook_panel_position: 622
-current_line: 8
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
+browser: firefox
+backup_path: "/home/eric"
+tab_spaces: 2
+glade_path: glade-3
+font_name: Monospace 10
