--- a/examples/70_better_views/.vr_settings.yaml
+++ b/examples/70_better_views/.vr_settings.yaml
@@ -6,11 +6,15 @@ panel_pos: 360
 notebook_panel_position: 718
 run_command_line: ruby better_views.rb
 open_files:
-- "/home/eric/vrp/vr3/examples/71_prettify_view/Untitled"
+- "/home/eric/vrp/vr3/examples/70_better_views/README.txt"
+- "/home/eric/vrp/vr3/examples/70_better_views/better_views.rb"
+- "/home/eric/vrp/vr3/examples/70_better_views/src/BetterView.rb"
 open_folders:
 - "/home/eric/vrp/vr3/examples/70_better_views"
-current_file: "/home/eric/vrp/vr3/examples/71_prettify_view/Untitled"
-current_line: 1
+- "/home/eric/vrp/vr3/examples/70_better_views/src"
+- "/home/eric/vrp/vr3/examples/70_better_views/src/glade"
+current_file: "/home/eric/vrp/vr3/examples/70_better_views/src/BetterView.rb"
+current_line: 9
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
