--- a/examples/06_builder_object/.vr_settings.yaml
+++ b/examples/06_builder_object/.vr_settings.yaml
@@ -1,10 +1,9 @@
 --- !ruby/object:VR_ENV
-browser: firefox
-width: 1858
+vr_yaml_file: "/home/eric/vrp/vr3/examples/06_builder_object/.vr_settings.yaml"
+width: 1854
 height: 1003
 panel_pos: 360
-backup_path: "/home/eric"
-tab_spaces: 2
+notebook_panel_position: 718
 run_command_line: ruby builder.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/06_builder_object/builder.rb"
@@ -14,12 +13,13 @@ open_folders:
 - "/home/eric/vrp/vr3/examples/06_builder_object"
 - "/home/eric/vrp/vr3/examples/06_builder_object/src"
 - "/home/eric/vrp/vr3/examples/06_builder_object/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/06_builder_object/README.txt"
-glade_path: glade-3
-font_name: Monospace 10
+current_file: "/home/eric/vrp/vr3/examples/06_builder_object/src/BuilderDemo.rb"
+current_line: 26
 rdoc_command_line: rdoc -x README
-vr_yaml_file: "/home/eric/vrp/vr3/examples/06_builder_object/.vr_settings.yaml"
-notebook_panel_position: 718
-current_line: 30
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
+browser: firefox
+backup_path: "/home/eric"
+tab_spaces: 2
+glade_path: glade-3
+font_name: Monospace 10
