--- a/examples/20_calculator/.vr_settings.yaml
+++ b/examples/20_calculator/.vr_settings.yaml
@@ -1,21 +1,18 @@
 --- !ruby/object:VR_ENV
-vr_yaml_file: "/home/eric/vrp/vr3/examples/04_calculator/.vr_settings.yaml"
-width: 1858
+vr_yaml_file: "/home/eric/vrp/vr3/examples/20_calculator/.vr_settings.yaml"
+width: 1854
 height: 1003
 panel_pos: 365
 notebook_panel_position: 400
 run_command_line: ruby calculator.rb
 open_files:
-- "/home/eric/vrp/vr3/examples/04_calculator/calculator.rb"
-- "/home/eric/vrp/vr3/examples/04_calculator/src/CalculatorGUI.rb"
+- "/home/eric/vrp/vr3/examples/07_event_handlers/Untitled"
 open_folders:
-- "/home/eric/vrp/vr3/examples/04_calculator"
-- "/home/eric/vrp/vr3/examples/04_calculator/src"
-- "/home/eric/vrp/vr3/examples/04_calculator/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/04_calculator/src/CalculatorGUI.rb"
-current_line: 69
+- "/home/eric/vrp/vr3/examples/20_calculator"
+current_file: "/home/eric/vrp/vr3/examples/07_event_handlers/Untitled"
+current_line: 1
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
-settings_file_version: 1
 top_level_window: false
+settings_file_version: 1
 filename: ".vr_settings.yaml"
