--- a/examples/01_phantom/.vr_settings.yaml
+++ b/examples/01_phantom/.vr_settings.yaml
@@ -1,6 +1,6 @@
 --- !ruby/object:VR_ENV
 vr_yaml_file: "/home/eric/vrp/vr3/examples/01_phantom/.vr_settings.yaml"
-width: 1858
+width: 1854
 height: 1003
 panel_pos: 360
 notebook_panel_position: 742
@@ -13,8 +13,8 @@ open_folders:
 - "/home/eric/vrp/vr3/examples/01_phantom"
 - "/home/eric/vrp/vr3/examples/01_phantom/src"
 - "/home/eric/vrp/vr3/examples/01_phantom/src/glade"
-current_file: "/home/eric/vrp/vr3/examples/01_phantom/phantom.rb"
-current_line: 7
+current_file: "/home/eric/vrp/vr3/examples/01_phantom/README.txt"
+current_line: 37
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
