--- a/.vr_settings.yaml
+++ b/.vr_settings.yaml
@@ -4,31 +4,23 @@ width: 1854
 height: 1003
 panel_pos: 370
 notebook_panel_position: 568
-run_command_line: ruby vr
+run_command_line: vr
 open_files:
-- "/home/eric/vrp/vr3/lib/GladeGUI.rb"
 - "/home/eric/vrp/vr3/lib/treeview/FileTreeView.rb"
-- "/home/eric/vrp/vr3/lib/treeview/ListView.rb"
-- "/home/eric/vrp/vr3/lib/treeview/ViewCommon.rb"
-- "/home/eric/vrp/vr3/lib/treeview/columns/TreeViewColumn.rb"
 - "/home/eric/vrp/vr3/src/main/VR_File_Tree.rb"
 - "/home/eric/vrp/vr3/src/main/VR_Main.rb"
-- "/home/eric/vrp/vr3/src/main/VR_Tools.rb"
-- "/home/eric/vrp/vr3/vr.gemspec"
-- "/home/eric/vrp/vr3/vr"
+- "/home/eric/vrp/vr3/src/editor/VR_TextShell.rb"
 - "/home/eric/vrp/vr3/all_requires.rb"
-- "/home/eric/vrp/vr3/lib/vrlib.rb"
-- "/home/eric/vrp/vr3/examples/49_settings_file/bin/MainApp.rb"
-- "/home/eric/vrp/vr3/examples/80_golf_handicap/golf_handicap.rb"
-- "/home/eric/vrp/vr3/examples/80_golf_handicap/src/LoadGolfer.rb"
-- "/home/eric/vrp/vr3/lib/SavableClass.rb"
-- "/home/eric/vrp/vr3/src/main/RubygemsAPI.rb"
-- "/home/eric/vrp/vr3/examples/49_settings_file/bin/SavableSettings.rb"
+- "/home/eric/vrp/vr3/lib/treeview/ViewCommon.rb"
+- "/home/eric/vrp/vr3/src/main/VR_ENV.rb"
+- "/home/eric/vrp/vr3/lib/GladeGUI.rb"
 open_folders:
 - "/home/eric/vrp/vr3"
-- "/home/eric/vrp/vr3/examples"
+- "/home/eric/vrp/vr3/src"
+- "/home/eric/vrp/vr3/src/main"
+- "/home/eric/vrp/vr3/src/main/glade"
 current_file: "/home/eric/vrp/vr3/src/main/VR_Main.rb"
-current_line: 139
+current_line: 186
 rdoc_command_line: rdoc -x README
 builder: !ruby/object:Gtk::Builder {}
 top_level_window: false
