--- a/examples/02_hello/.vr_settings.yaml
+++ b/examples/02_hello/.vr_settings.yaml
@@ -4,7 +4,7 @@ width: 1854
 height: 1003
 panel_pos: 360
 notebook_panel_position: 724
-run_command_line: ruby hello.rb
+run_command_line: hello.rb
 open_files:
 - "/home/eric/vrp/vr3/examples/02_hello/README.txt"
 - "/home/eric/vrp/vr3/examples/02_hello/hello.rb"
